* Updated overlay_add_polygon() to use shared memory, to handle polygons with large numbers of sides
* Improved compatibility of sirilpy.tkfilebrowser with tkinter.filedialog (allows replacing the awful Linux tk filedialog)
* Improved the GPU module helper methods in sirilpy
* Fixed a crash with RGB compositing (#1562)
* Changed the default GHT colour mode from human weighed luminance to independent (!899)
* Added / improved GPU helper modules to assist with installation and testing of key GPU-related modules. (!895)
* Allow "Crop Sequence" with the internal sequence used in RGB composition, to aid with LRGB workflows. (!902)
* Add python method to draw Polygons in the Siril overlay.
* Allow opening scripts at a previous revision in case of bad updates. Uses the double click to open functionality of the tree view.

siril 1.4.0-beta2
05/21/25

**Fixes:**
* Fixed option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
* Fixed crash and slowness when refreshing the scripts list (#1548, #1574)
* Python scripts are now sorted alphabetically (#1559)
* Fixed crash in Noise Reduction with Independent Channels option selected (#1567)
* Fixed UI hang when manually refreshing scripts or SPCC (#1566)
* Fixed incorrect behaviour when using set_image_pixeldata to chage the number of channels (#1570)
* Fixed incorrect siril command return values (#1569)
* Fixed crash in astrometric registration when the reference image could not be platesolved (#1557)
* Fixed preventing max framing export in seqapplyreg with FITSEQ or SER (#1561)
* Fixed obscode that was not exported in the AAVSO csv (#1577)
* Removed graxpert_deconv from the command line (#1575)
* Fixed SPCC failing to open files on Windows when the filepath contains non-ASCII characters (e.g., accented characters) (#1584)
* Fixed parameter parsing in PixelMath (#1594)
* Fixed bad font kerning on macOS (#1508)
* Fixed crash on Windows language change (#1560)