@@ -483,7 +483,7 @@ along with Siril.  If not, see <http://www.gnu.org/licenses/>.
                       <object class="GtkToolButton" id="histoToolAutoStretch">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes">Apply autostretch algorithm to image</property>
+                        <property name="tooltip-text" translatable="yes">Preview autostretch algorithm on the image. Due to peculiarities of colour management, once this is clicked the sliders and value entry widgets will become insensitive until either Reset or Apply is clicked. Further tweaks can be made by clicking Apply and then making a second stretch,</property>
                         <property name="use-underline">True</property>
                         <property name="icon-widget">mtf</property>
                         <signal name="clicked" handler="on_histoToolAutoStretch_clicked" swapped="no"/>
